More information in README

--- a/README
+++ b/README
@@ -1,3 +1,10 @@
-The ramdisk for radxa rock.
+The ramdisk image for radxa rock and other rockchip based platforms.
 
-Visit http://wiki.radxa.com/Rock/Booting_Linux for how to use it.
+=== How to generate the ramdisk ===
+    find . ! -path "./.git*"  | cpio -H newc  -ov > initrd.img
+
+=== Usage ===
+Visit http://wiki.radxa.com/Rock/Booting_Linux for more information.
+
+=== Credit ===
+Bsed on https://github.com/Galland/rk30_linux_initramfs which is based on fkubi's initramfs who in turn based it on Debian's initramfs.cpio.
