Change README to github style markdown

--- a/README
+++ b/README
@@ -1,10 +1,13 @@
 The ramdisk image for radxa rock and other rockchip based platforms.
 
-=== How to generate the ramdisk ===
+### How to generate the ramdisk ###
+
     find . ! -path "./.git*"  | cpio -H newc  -ov > initrd.img
 
-=== Usage ===
+### Usage ###
+
 Visit http://wiki.radxa.com/Rock/Booting_Linux for more information.
 
-=== Credit ===
-Bsed on https://github.com/Galland/rk30_linux_initramfs which is based on fkubi's initramfs who in turn based it on Debian's initramfs.cpio.
+### Credit ###
+
+Based on https://github.com/Galland/rk30_linux_initramfs which is based on fkubi's initramfs who in turn based it on Debian's initramfs.cpio.
